with_open_api trait
