# openapi/osuny/v1/openapi.json
@@ -401,74 +401,6 @@
           }
         }
       },
-      "communication_block": {
-        "type": "object",
-        "title": "Communication::Block",
-        "properties": {
-          "id": {
-            "type": "string",
-            "format": "uuid",
-            "nullable": true
-          },
-          "migration_identifier": {
-            "type": "string",
-            "nullable": true
-          },
-          "template_kind": {
-            "type": "string",
-            "description": "Template kind of the blocks.",
-            "enum": [
-              "agenda",
-              "call_to_action",
-              "chapter",
-              "contact",
-              "datatable",
-              "definitions",
-              "embed",
-              "features",
-              "files",
-              "gallery",
-              "image",
-              "key_figures",
-              "license",
-              "links",
-              "locations",
-              "organizations",
-              "pages",
-              "papers",
-              "persons",
-              "posts",
-              "projects",
-              "programs",
-              "sound",
-              "testimonials",
-              "timeline",
-              "title",
-              "video",
-              "volumes"
-            ]
-          },
-          "title": {
-            "type": "string"
-          },
-          "position": {
-            "type": "integer"
-          },
-          "published": {
-            "type": "boolean",
-            "default": true
-          },
-          "html_class": {
-            "type": "string",
-            "description": "For advanced use. Add an HTML class for custom purposes."
-          },
-          "data": {
-            "type": "object",
-            "description": "Data of the block. The structure depends on the template kind.",
-            "additionalProperties": true
-          }
-        }
-      },
       "communication_block_agenda": {
         "type": "object",
         "title": "Communication::Block (Agenda)",
@@ -2770,12 +2702,12 @@
                             "subtitle": null,
                             "summary": null,
                             "text": null,
-                            "created_at": "2024-12-09T10:38:12.634+01:00",
-                            "updated_at": "2024-12-09T10:38:12.634+01:00"
+                            "created_at": "2024-12-09T15:51:56.762+01:00",
+                            "updated_at": "2024-12-09T15:51:56.762+01:00"
                           }
                         },
-                        "created_at": "2024-12-09T10:38:12.649+01:00",
-                        "updated_at": "2024-12-09T10:38:12.649+01:00"
+                        "created_at": "2024-12-09T15:51:56.778+01:00",
+                        "updated_at": "2024-12-09T15:51:56.778+01:00"
                       },
                       {
                         "id": "253a800b-42fe-5586-8114-0c8d6913bbbc",
@@ -2800,12 +2732,12 @@
                             "subtitle": null,
                             "summary": null,
                             "text": null,
-                            "created_at": "2024-12-09T10:38:12.634+01:00",
-                            "updated_at": "2024-12-09T10:38:12.634+01:00"
+                            "created_at": "2024-12-09T15:51:56.762+01:00",
+                            "updated_at": "2024-12-09T15:51:56.762+01:00"
                           }
                         },
-                        "created_at": "2024-12-09T10:38:12.649+01:00",
-                        "updated_at": "2024-12-09T10:38:12.649+01:00"
+                        "created_at": "2024-12-09T15:51:56.778+01:00",
+                        "updated_at": "2024-12-09T15:51:56.778+01:00"
                       },
                       {
                         "id": "f28734c1-0052-554d-a50e-b2356d8c66e4",
@@ -2830,12 +2762,12 @@
                             "subtitle": null,
                             "summary": null,
                             "text": null,
-                            "created_at": "2024-12-09T10:38:12.634+01:00",
-                            "updated_at": "2024-12-09T10:38:12.634+01:00"
+                            "created_at": "2024-12-09T15:51:56.762+01:00",
+                            "updated_at": "2024-12-09T15:51:56.762+01:00"
                           }
                         },
-                        "created_at": "2024-12-09T10:38:12.649+01:00",
-                        "updated_at": "2024-12-09T10:38:12.649+01:00"
+                        "created_at": "2024-12-09T15:51:56.778+01:00",
+                        "updated_at": "2024-12-09T15:51:56.778+01:00"
                       }
                     ]
                   }
@@ -2908,19 +2840,19 @@
                 "examples": {
                   "Successful creation": {
                     "value": {
-                      "id": "dc2011ad-bd48-4790-8ec1-1198bba4491b",
+                      "id": "4a935454-5f8e-44ed-a8c9-e0e2c2a02785",
                       "migration_identifier": "post-from-api-1",
                       "full_width": false,
                       "localizations": {
                         "fr": {
-                          "id": "a5b8e3b9-a2f1-4b34-bc66-45c1468b0e2d",
+                          "id": "868f95ef-c95a-4280-8700-235c28d6fb17",
                           "migration_identifier": "post-from-api-1-fr",
                           "title": "Ma nouvelle actualité",
                           "featured_image": {
-                            "blob_id": "2dd4064e-46c0-4819-8d2d-427b8cca9fbb",
+                            "blob_id": "406d406e-3f96-41e0-bbc0-124e3dbe2863",
                             "alt": "La lumière brille sur les parois du canyon",
                             "credit": "<p>Photo de <a href=\"https://unsplash.com/fr/@johnnzhou\">John Zhou</a> sur <a href=\"https://unsplash.com/fr/photos/la-lumiere-brille-sur-les-parois-du-canyon-AM-G-Yp5hIk\">Unsplash</a></p>",
-                            "url": "http://my-university.osuny.test/rails/active_storage/disk/eyJfcmFpbHMiOnsiZGF0YSI6eyJrZXkiOiJoY3RkcXJ1bDA0ejdpamFtMG9tbnd2Z3N3aTR0IiwiZGlzcG9zaXRpb24iOiJpbmxpbmU7IGZpbGVuYW1lPVwicGhvdG8tMTcwMzkyMzYzMzYxNi0yNTRlNzhmNmU5ZGZcIjsgZmlsZW5hbWUqPVVURi04JydwaG90by0xNzAzOTIzNjMzNjE2LTI1NGU3OGY2ZTlkZiIsImNvbnRlbnRfdHlwZSI6ImltYWdlL2pwZWciLCJzZXJ2aWNlX25hbWUiOiJ0ZXN0In0sImV4cCI6IjIwMjQtMTItMDlUMTA6Mzg6MTMuMzQ1WiIsInB1ciI6ImJsb2Jfa2V5In19--07fb1e12eec0f98f5bee766b9b28a0846e940489/photo-1703923633616-254e78f6e9df"
+                            "url": "http://my-university.osuny.test/rails/active_storage/disk/eyJfcmFpbHMiOnsiZGF0YSI6eyJrZXkiOiIzdDIydXJydHp0YmRhYTg3Y25uMGNoM202Nnk0IiwiZGlzcG9zaXRpb24iOiJpbmxpbmU7IGZpbGVuYW1lPVwicGhvdG8tMTcwMzkyMzYzMzYxNi0yNTRlNzhmNmU5ZGZcIjsgZmlsZW5hbWUqPVVURi04JydwaG90by0xNzAzOTIzNjMzNjE2LTI1NGU3OGY2ZTlkZiIsImNvbnRlbnRfdHlwZSI6ImltYWdlL2pwZWciLCJzZXJ2aWNlX25hbWUiOiJ0ZXN0In0sImV4cCI6IjIwMjQtMTItMDlUMTU6NTE6NTcuNTM5WiIsInB1ciI6ImJsb2Jfa2V5In19--642b0735108a40d7f47cf9e3bd326b78e78a967d/photo-1703923633616-254e78f6e9df"
                           },
                           "meta_description": "Une nouvelle actualité depuis l'API",
                           "pinned": false,
@@ -2930,12 +2862,12 @@
                           "subtitle": "Une nouvelle actualité",
                           "summary": "<p>Ceci est une nouvelle actualité créée depuis l'API.</p>",
                           "text": null,
-                          "created_at": "2024-12-09T10:38:13.230+01:00",
-                          "updated_at": "2024-12-09T10:38:13.246+01:00"
+                          "created_at": "2024-12-09T15:51:57.405+01:00",
+                          "updated_at": "2024-12-09T15:51:57.424+01:00"
                         }
                       },
-                      "created_at": "2024-12-09T10:38:13.214+01:00",
-                      "updated_at": "2024-12-09T10:38:13.340+01:00"
+                      "created_at": "2024-12-09T15:51:57.395+01:00",
+                      "updated_at": "2024-12-09T15:51:57.533+01:00"
                     }
                   }
                 }
@@ -3090,12 +3022,12 @@
                           "subtitle": null,
                           "summary": null,
                           "text": null,
-                          "created_at": "2024-12-09T10:38:12.634+01:00",
-                          "updated_at": "2024-12-09T10:38:12.634+01:00"
+                          "created_at": "2024-12-09T15:51:56.762+01:00",
+                          "updated_at": "2024-12-09T15:51:56.762+01:00"
                         }
                       },
-                      "created_at": "2024-12-09T10:38:12.649+01:00",
-                      "updated_at": "2024-12-09T10:38:12.649+01:00"
+                      "created_at": "2024-12-09T15:51:56.778+01:00",
+                      "updated_at": "2024-12-09T15:51:56.778+01:00"
                     }
                   }
                 }
@@ -3197,12 +3129,12 @@
                           "subtitle": null,
                           "summary": null,
                           "text": null,
-                          "created_at": "2024-12-09T10:38:12.634+01:00",
-                          "updated_at": "2024-12-09T10:38:13.483+01:00"
+                          "created_at": "2024-12-09T15:51:56.762+01:00",
+                          "updated_at": "2024-12-09T15:51:57.676+01:00"
                         }
                       },
-                      "created_at": "2024-12-09T10:38:12.649+01:00",
-                      "updated_at": "2024-12-09T10:38:13.488+01:00"
+                      "created_at": "2024-12-09T15:51:56.778+01:00",
+                      "updated_at": "2024-12-09T15:51:57.681+01:00"
                     }
                   }
                 }
@@ -3425,12 +3357,12 @@
                             "social_vimeo": null,
                             "social_x": null,
                             "social_youtube": null,
-                            "created_at": "2024-12-09T10:38:12.602+01:00",
-                            "updated_at": "2024-12-09T10:38:12.602+01:00"
+                            "created_at": "2024-12-09T15:51:56.729+01:00",
+                            "updated_at": "2024-12-09T15:51:56.729+01:00"
                           }
                         },
-                        "created_at": "2024-12-09T10:38:12.652+01:00",
-                        "updated_at": "2024-12-09T10:38:12.652+01:00"
+                        "created_at": "2024-12-09T15:51:56.780+01:00",
+                        "updated_at": "2024-12-09T15:51:56.780+01:00"
                       },
                       {
                         "id": "a3f63673-fb05-5751-8634-a2a8bccc1f3d",
@@ -3472,8 +3404,8 @@
                             "social_vimeo": null,
                             "social_x": null,
                             "social_youtube": null,
-                            "created_at": "2024-12-09T10:38:12.602+01:00",
-                            "updated_at": "2024-12-09T10:38:12.602+01:00"
+                            "created_at": "2024-12-09T15:51:56.729+01:00",
+                            "updated_at": "2024-12-09T15:51:56.729+01:00"
                           },
                           "en": {
                             "id": "f55e6093-cf39-525e-b83c-331d90fad1c6",
@@ -3491,12 +3423,12 @@
                             "social_vimeo": null,
                             "social_x": null,
                             "social_youtube": null,
-                            "created_at": "2024-12-09T10:38:12.602+01:00",
-                            "updated_at": "2024-12-09T10:38:12.602+01:00"
+                            "created_at": "2024-12-09T15:51:56.729+01:00",
+                            "updated_at": "2024-12-09T15:51:56.729+01:00"
                           }
                         },
-                        "created_at": "2024-12-09T10:38:12.652+01:00",
-                        "updated_at": "2024-12-09T10:38:12.652+01:00"
+                        "created_at": "2024-12-09T15:51:56.780+01:00",
+                        "updated_at": "2024-12-09T15:51:56.780+01:00"
                       }
                     ]
                   }
@@ -3596,12 +3528,12 @@
                           "social_vimeo": null,
                           "social_x": null,
                           "social_youtube": null,
-                          "created_at": "2024-12-09T10:38:12.602+01:00",
-                          "updated_at": "2024-12-09T10:38:12.602+01:00"
+                          "created_at": "2024-12-09T15:51:56.729+01:00",
+                          "updated_at": "2024-12-09T15:51:56.729+01:00"
                         }
                       },
-                      "created_at": "2024-12-09T10:38:12.652+01:00",
-                      "updated_at": "2024-12-09T10:38:12.652+01:00"
+                      "created_at": "2024-12-09T15:51:56.780+01:00",
+                      "updated_at": "2024-12-09T15:51:56.780+01:00"
                     }
                   }
                 },
